--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mongodb-download",
-  "version": "2.2.6",
+  "version": "2.2.7-dev",
   "description": "download mongodb prebuilt packages from mongodb",
   "main": "built/mongodb-download.js",
   "bin": "built/mongodb-download-cli.js",
@@ -34,7 +34,7 @@
   "devDependencies": {
     "@types/node": "^6.0.70",
     "chai": "^3.5.0",
-    "mocha": "^3.2.0"
+    "mocha": "^5.2.0"
   },
   "homepage": "https://github.com/winfinit/mongodb-download#readme"
 }
