feat: added option to change download center

--- a/package.json
+++ b/package.json
@@ -6,20 +6,27 @@
   "bin": "built/mongodb-download-cli.js",
   "types": "built/mongodb-download.d.ts",
   "scripts": {
+    "build": "tsc --build tsconfig.json",
     "test": "mocha"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/winfinit/mongodb-download.git"
+    "url": "git+https://github.com/joebach71/mongodb-download.git"
   },
   "keywords": [
     "mongodb",
     "download"
   ],
   "author": "Roman Jurkov <winfinit@gmail.com>",
+  "contributors": [
+    {
+      "name": "Joe Park",
+      "email": "catechimus@gmail.com"
+    }
+  ],
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/winfinit/mongodb-download/issues"
+    "url": "https://github.com/joebach71/mongodb-download/issues"
   },
   "dependencies": {
     "yargs": "^3.26.0",
@@ -36,5 +43,5 @@
     "chai": "^3.5.0",
     "mocha": "^5.2.0"
   },
-  "homepage": "https://github.com/winfinit/mongodb-download#readme"
+  "homepage": "https://github.com/joebach71/mongodb-download#readme"
 }
